Import of MCGRUFF/Audio-Ardour-Irc-0.20 from CPAN.
gitpan-cpan-distribution: Audio-Ardour-Irc
gitpan-cpan-version:      0.20
gitpan-cpan-path:         MCGRUFF/Audio-Ardour-Irc-0.20.tar.gz
gitpan-cpan-author:       MCGRUFF
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Audio::Ardour::Irc version 0.1
-==================================
+==================
+Audio::Ardour::Irc
+==================
 
 Audio::Ardour::Irc passes OSC messages to Ardour allowing control
 by (for example) an infra red remote.
